clusters/home/apps/speedtest-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "kubernetes.io/hostname"
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: speedtest-tracker
      containers:
      - name: speedtest-tracker
        imagePullPolicy: IfNotPresent
        image: ghcr.io/alexjustesen/speedtest-tracker
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: speedtest-tracker
          mountPath: /config  
      volumes:
      - name: speedtest-tracker
        persistentVolumeClaim:
          claimName: speedtest-tracker
