clusters/home/apps/speedtest-tracker/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
spec:
  selector:
    app: speedtest-tracker
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker
  labels:
    name: speedtest-tracker
  annotations:
    kubernetes.io/ingress.class: nginx
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Self-hosted internet performance tracking application
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: speedtest-tracker
    gethomepage.dev/name: Speedtest Tracker
    gethomepage.dev/weight: "1"
    gethomepage.dev/widget.type: speedtest
    gethomepage.dev/widget.url: https://speedtest.pacholoamit.com
spec:
  rules:
  - host: speedtest.pacholoamit.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: speedtest-tracker
            port: 
              number: 80
